--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active=test
+spring.http.multipart.max-file-size=10KB
+spring.http.multipart.max-request-size=10KB
 
 default.sender=geovane.gjunior@gmail.com
 default.recipient=geovane.gjunior@gmail.com
@@ -6,7 +8,7 @@ default.recipient=geovane.gjunior@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=3660000
 
-aws.access_key_id=
+aws.access_key_id=A
 aws.secret_access_key=
 s3.bucket=geovane-curso-spring-ionic
 s3.region=sa-east-1
