--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ default.recipient=geovane.gjunior@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=3660000
 
-aws.access_key_id=A
+aws.access_key_id=
 aws.secret_access_key=
 s3.bucket=geovane-curso-spring-ionic
 s3.region=sa-east-1
