--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=test
-spring.http.multipart.max-file-size=10KB
-spring.http.multipart.max-request-size=10KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 default.sender=geovane.gjunior@gmail.com
 default.recipient=geovane.gjunior@gmail.com
