--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ s3.bucket=geovane-curso-spring-ionic
 s3.region=sa-east-1
 
 img.prefix.client.profile=cp
+img.prefix.categoria.profile=cat
+img.prefix.produto.profile=prod
 img.profile.size=200
