--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ default.recipient=geovane.gjunior@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=3660000
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIA5PXOCHQXNVNKTSZY
+aws.secret_access_key=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
 s3.bucket=geovane-curso-spring-ionic
 s3.region=sa-east-1
 
