Pequenos ajustes na aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ default.sender=geovane.gjunior@gmail.com
 default.recipient=geovane.gjunior@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=3660000
+jwt.expiration=3660000 
 
-aws.access_key_id=AKIA5PXOCHQXNVNKTSZY
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=geovane-curso-spring-ionic
 s3.region=sa-east-1
 
