--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 default.sender=geovane.gjunior@gmail.com
 default.recipient=geovane.gjunior@gmail.com
 
-jwt.secret=AnnaBeatrizAnnaLuiza
+jwt.secret=AnnaBeatrizPalmeirasAnnaLuiza
 jwt.expiration=3660000 
 
 aws.access_key_id=
